# AI-Symphony

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  hello.html  index.html  minimal_test.py  pyproject.toml  requirements.in  requirements.txt  setup.sh  test_llm.py  test_openai.py  test_tools_directly.py  verify_enhancements.py
.github/workflows/: ci.yml
assets/css/: styles.css
hello_world/: facts.txt  main.py
hello_world_interesting/: README.md  main.py  requirements.txt
src/: cost_tracker.py  dashboard.py  main.py
src/config/: agents.yaml  agents.yaml.bak  agents.yaml.bak4  agents.yaml.llama4.ba
src/tools/: github_tools.py  workspace_tools.py
tests/: __init__.py  conftest.py  test_cost_tracker.py  test_dashboard.py  test_error_handling.py  test_github_tools.py  test_integration.py  test_main.py  test_workspace_tools.py
